# FakeGps

./: gradlew  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  fake_gps_hook.cpp
app/src/main/java/com/fakegps/: BootReceiver.java  FakeGpsNative.java  FakeGpsService.java  FakeGpsService.kt  MainActivity.kt
app/src/main/res/drawable/: floating_circle.xml
app/src/main/res/layout/: activity_main.xml  dialog_map.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  themes.xml
